<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_img"
        tools:context=".MainActivity">


    <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="207dp"
            android:layout_height="307dp"
            android:layout_centerInParent="true"
            android:background="#E0FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="50dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/facebook"
                        app:srcCompat="@drawable/facebook_icon" />

                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="2dp"
                        android:contentDescription="@string/googleplus"
                        android:paddingBottom="3dp"
                        app:srcCompat="@drawable/googleplus_licon" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/instagram"
                        app:srcCompat="@drawable/instagram_icon" />

                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/youtube"
                        app:srcCompat="@drawable/youtube_icon" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name"
                        android:textColor="#FF0000FF" />

                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name"
                        android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textColor="#FF0000FF" />

                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:singleLine="true" />
            </LinearLayout>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login" />
        </LinearLayout>

    </FrameLayout>

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:text="@string/STV"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


</RelativeLayout>